Skip unnecessary meta model version migration